k8s/3/03-go-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: lab3-app
  labels:
    app: go-app
    lab: lab3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: go-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: go-app
          image: ghcr.io/alzoabiaf/containers-lab-1/app:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: lab3-app
spec:
  selector:
    app: go-app
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
