k8s/3/04-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: lab3-app
  labels:
    app: nginx
    lab: lab3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-html
          configMap:
            name: nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: lab3-app
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
